# njligames-njlic_engine

./: .clang-format  .gitignore  README.md
bullet/: btPrint.h
bullet3/: btCollisionObjectDecorator.cpp  btCollisionObjectDecorator.h  btManifoldPointDecorator.cpp  btManifoldPointDecorator.h  btMatrix3x3Decorator.cpp  btMatrix3x3Decorator.h  btQuaternionDecorator.cpp  btQuaternionDecorator.h  btRigidBodyDecorator.cpp  btRigidBodyDecorator.h  btTransformDecorator.cpp  btTransformDecorator.h  btVector2.h  btVector2Decorator.cpp  btVector2Decorator.h  btVector3Decorator.cpp  btVector3Decorator.h  btVector4Decorator.cpp  btVector4Decorator.h
cmake/: .macos_external_libraries.cmake.swp  DownloadBullet3.cmake  DownloadCLI.cmake  DownloadDebug-Draw.cmake  DownloadGLEW.cmake  DownloadGLM.cmake  DownloadImGui.cmake  DownloadImGuizmo.cmake  DownloadJsonCPP.cmake  DownloadLibrary.cmake  DownloadNanoVG.cmake  DownloadOGG.cmake  DownloadOpenAL.cmake  DownloadOpenCV.cmake  DownloadSTBImages.cmake  DownloadTinyXml2.cmake  DownloadVorbis.cmake  DownloadZLib.cmake  FindBullet3.cmake  FindCLI.cmake  FindDebug-Draw.cmake  FindGLEW_NJLIC.cmake  FindGLM.cmake  FindImGui.cmake  FindImGuizmo.cmake  FindJsonCPP.cmake  FindLibrary.cmake  FindNanoVG.cmake  FindOGG.cmake  FindOpenAL_NJLIC.cmake  FindOpenCV.cmake  FindSTBImages.cmake  FindTinyXml2.cmake  FindVorbis.cmake  FindZLib.cmake  SelectLibraryConfigurations.cmake  ZerobraneAPI.cmake  android_external_libraries.cmake  appletv_external_libraries.cmake  doxygen.cmake  (+19 more)
glm/: Mat3Decorator.cpp  Mat3Decorator.h  Mat4Decorator.cpp  Mat4Decorator.h  QuatDecorator.cpp  QuatDecorator.h  Vec2Decorator.cpp  Vec2Decorator.h  Vec3Decorator.cpp  Vec3Decorator.h  Vec4Decorator.cpp  Vec4Decorator.h
lua/: CMakeLists.txt
lua/exts/: lualoadexts.c  luasocketscripts.c
lua/src/: lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lbitlib.c  lcode.c  lcorolib.c  ldblib.c  ldebug.c  ldo.c  ldump.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  lmathlib.c  lmem.c  loadlib.c  lobject.c  lopcodes.c  loslib.c  lparser.c  lstate.c  lstring.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  lua.h  luac.c  luaconf.h  lualib.h  lundump.c  lutf8lib.c  lvm.c  lzio.c
minizip/: ioapi.c  unzip.c  zip.c
nanovg/: android_file.h  fontstash.h  stb_image.h
njli/: AbstractActionable.cpp  AbstractActionable.h  AbstractClock.h  AbstractDecorator.cpp  AbstractDecorator.h  AbstractFactoryObject.cpp  AbstractFactoryObject.h  AbstractObject.h  AbstractState.h  AbstractStateMachine.h  AbstractTransform.cpp  AbstractTransform.h  Action.cpp  Action.h  Camera.cpp  Camera.h  Clock.cpp  Clock.h  CollisionResponse.cpp  CollisionResponse.h  CubeBuilder.h  Font.cpp  Font.h  GameClock.cpp  GameClock.h  Image.cpp  Image.h  JLIEngine.h  JLIFactoryTypes.cpp  JLIFactoryTypes.h  JsonJLI.cpp  JsonJLI.h  Node.cpp  Node.h  NodeState.cpp  NodeState.h  NodeStateMachine.cpp  NodeStateMachine.h  Scene.cpp  Scene.h  (+28 more)
njli/builders/: AbstractBuilder.cpp  AbstractBuilder.h  ActionBuilder.cpp  ActionBuilder.h  CameraBuilder.cpp  CameraBuilder.h  ClockBuilder.cpp  ClockBuilder.h  CollisionResponseBuilder.cpp  CollisionResponseBuilder.h  FontBuilder.cpp  FontBuilder.h  ImageBuilder.cpp  ImageBuilder.h  JsonJLIBuilder.cpp  JsonJLIBuilder.h  LevelOfDetailBuilder.cpp  LevelOfDetailBuilder.h  LightBuilder.cpp  LightBuilder.h  NodeBuilder.cpp  NodeBuilder.h  NodeStateBuilder.cpp  NodeStateBuilder.h  NodeStateMachineBuilder.cpp  NodeStateMachineBuilder.h  ParticleEmitterBuilder.cpp  ParticleEmitterBuilder.h  PlaneBuilder.cpp  PlaneBuilder.h  SceneBuilder.cpp  SceneBuilder.h  SceneStateBuilder.cpp  SceneStateBuilder.h  SceneStateMachineBuilder.cpp  (+17 more)
njli/platform/: CMakeLists.txt  ColorUtil.cpp  ColorUtil.h  DeviceInputTime.h  DeviceKey.h  DeviceMouse.cpp  DeviceMouse.h  DeviceTouch.h  DeviceUtil.cpp  DeviceUtil.h  Engine.cpp  Engine.h  File.h  Game.cpp  Game.h  JLIAssetUtil.h  Localization.h  Log.h  Macros.h  NJLIInterface.cpp  NJLIInterface.h  Util.h  WorldAd.h  WorldEvent.h  WorldInput.cpp  WorldInput.h  android_file.cpp  android_file.h  easylogger.cpp  easylogger.h  main.cpp
njli/platform/android/: Building Android programs on the command line.webloc  DeviceTouch.cpp  File.cpp  GraphicsPlatform.h  Log.cpp  SoundPlatform.cpp  SoundPlatform.h
njli/platform/appletv/: DeviceTouch.mm  File.mm  GraphicsPlatform.h  Localization.mm  Log.mm  SoundPlatform.mm
njli/platform/applewatchos/: DeviceTouch.mm  File.mm  GraphicsPlatform.h  Localization.mm  Log.mm
njli/platform/cmake.in/: Doxyfile.in  NJLIGameEngineConfig.h.in
njli/platform/cmake.in/Tests.in/lua/: njli_test.lua
njli/platform/cmake.in/ldoc.in/: AbstractActionable.lua  AbstractBuilder.lua  AbstractClock.lua  AbstractDecorator.lua  AbstractFactoryObject.lua  AbstractFrameBufferObject.lua  AbstractObject.lua  AbstractState.lua  AbstractStateMachine.lua  AbstractTransform.lua  Action.lua  ActionBuilder.lua  ButtonHUD.lua  ButtonHUDBuilder.lua  Camera.lua  CameraBuilder.lua  CheckboxHUD.lua  CheckboxHUDBuilder.lua  Clock.lua  ClockBuilder.lua  CollisionResponse.lua  CollisionResponseBuilder.lua  Cube.lua  CubeBuilder.lua  DeviceInputTime.lua  DeviceTouch.lua  DropdownHUD.lua  DropdownHUDBuilder.lua  Font.lua  FontBuilder.lua  GameClock.lua  Geometry.lua  Image.lua  ImageBuilder.lua  JsonJLI.lua  JsonJLIBuilder.lua  LabelHUD.lua  LabelHUDBuilder.lua  LevelOfDetail.lua  LevelOfDetailBuilder.lua  (+122 more)
njli/platform/emscripten/: DeviceTouch.cpp  File.cpp  GraphicsPlatform.h  Localization.cpp  Log.cpp  SoundPlatform.cpp  SoundPlatform.h
njli/platform/ios/: DeviceTouch.mm  File.mm  GraphicsPlatform.h  Localization.mm  Log.mm  SoundPlatform.h  SoundPlatform.mm  WorldAd.mm  WorldEvent.mm
njli/platform/linux/: DeviceTouch.cpp  File.cpp  GraphicsPlatform.h  SoundPlatform.h
njli/platform/macOS/: .clang-format  DeviceTouch.mm  File.mm  GraphicsPlatform.h  Localization.mm  Log.mm  SoundPlatform.h  SoundPlatform.mm
njli/platform/unix/: File.cpp  SoundPlatform.h
njli/platform/windows/: DeviceTouch.cpp  File.cpp  GraphicsPlatform.h  Localization.cpp  Log.cpp  SoundPlatform.cpp  SoundPlatform.h
(+597 files in other folders)
